tdf#52577: Classify superscript numbers in Latin-1 block as ScriptType::WEAK

So that they inherit the script from the surrounding text like the rest
if superscripts and subscripts.

Change-Id: Ib5c19f84b080eca0f24009a4e6dd2dd4019441d9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154094
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@libreoffice.org>
(cherry picked from commit 0597a9f4924c35e93f9188a01048c9e94fe6b206)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154118